# robot

./: params.yaml  robot.code-workspace
robot/: CMakeLists.txt  README.md  package.xml
robot/ansible/: README.md  ansible.cfg
robot_bringup/: package.xml
robot_bringup/launch/: full.launch  joystick.launch  minimal.launch  robot.launch  teleop.launch  visualize.launch
robot_bringup/launch/includes/: people_tracking.launch
robot_bringup/launch/includes/controller/: joystick.launch
robot_bringup/launch/includes/mapping/: cartographer.launch  gmapping.launch  hector.launch  karto.launch
robot_bringup/launch/includes/robot/: localization.launch  mobile_base.launch
robot_bringup/launch/includes/robot/capabilities/: amcl.launch  teleop.launch
robot_bringup/launch/includes/robot/sensors/: d435.launch  rplidar.launch
robot_bringup/launch/includes/sensors/: r200.launch  rplidar.launch  webcam.launch
robot_bringup/param/: rplidar.yaml
robot_bringup/param/defaults/: smoother.yaml
robot_bringup/param/mapping/: karto.yaml
robot_bringup/param/sensors/: rplidar.yaml
robot_bringup/params/controller/: joystick.yaml
robot_bringup/params/mobile_base/: joystick.yaml  velocity_smoother.yaml
robot_bringup/params/mobile_base/sensors/: rplidar_filter.yaml
robot_bringup/rqt/: kobuki.perspective
robot_bringup/rviz/: default.rviz  kobuki.rviz
robot_description/: package.xml  robot.urdf
robot_driver/: CMakeLists.txt  package.xml
robot_navigation/: package.xml
robot_perception/: CMakeLists.txt  package.xml
robot_teleop/: CMakeLists.txt  package.xml
(+97 files in other folders)
