<?xml version="1.0"?>
<package format="2">
  <name>robot_bringup</name>
  <version>0.0.0</version>
  <description>The robot_bringup package</description>

  <maintainer email="ngenator@gmail.com">Daniel Ng</maintainer>

  <license>MIT</license>

  <author email="ngenator@gmail.com">Daniel Ng</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>yocs_cmd_vel_mux</exec_depend>
  <exec_depend>kobuki_bumper2pc</exec_depend>
  <exec_depend>kobuki_safety_controller</exec_depend>
  <exec_depend>turtlebot_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
</package>
