<?xml version="1.0"?>
<package format="2">
  <name>robot_bringup</name>
  <version>0.0.0</version>
  <description>The robot_bringup package</description>

  <maintainer email="ngenator@gmail.com">Daniel Ng</maintainer>

  <license>MIT</license>

  <author email="ngenator@gmail.com">Daniel Ng</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
